--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,20 @@ services:
     ports:
       - "6379:6379"
 
-
+  minio:
+    image: minio/minio:RELEASE.2025-05-24T17-08-30Z-cpuv1
+    container_name: 'minio'
+    ports:
+      - ":9000:9000"
+      - 9001:9001
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+      # MINIO_DEFAULT_BUCKETS: fileStorage
+    restart: 'no'
+    command: server /data --console-address ":9001"
+    volumes:
+      - minio_project_data:/data
 volumes:
   db_data:
+  minio_project_data:
