--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "ioredis": "^5.7.0",
+    "minio": "^8.0.5",
     "mysql2": "^3.14.3",
     "nodemailer": "^7.0.5",
     "reflect-metadata": "^0.2.2",
@@ -47,6 +48,8 @@
     "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
+    "@types/minio": "^7.1.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
     "@types/nodemailer": "^7.0.0",
     "@types/supertest": "^6.0.2",
